# bumps-video

./: .gitignore  Cargo.toml  flake.nix  run-stable.txt
.github/workflows/: deploy.yaml
docs/: plan.md
frontend/: index.html
scripts/: aws-relay.sh  ffmpeg-test.sh  record-rtmp.sh  run-stable.sh  run-starlink.sh  test-from-drone.sh  test-loopback.sh  test-preview-ws.py
src/: adapt.rs  main.rs  ping.rs  rtmp.rs  wsproto.rs
src/capture/: mod.rs
src/pipeline/: build.rs  mod.rs
src/stats/: collector.rs  mod.rs
src/web/: mod.rs
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  srt-relay.tf
