[package]
name = "bumps-pipe"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "signal", "io-util", "time", "fs"] }
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"
glib = "0.20"
rml_rtmp = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["trace"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
